<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/permission_view_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:text="@string/enable_location"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone">

        <TextView
            android:id="@+id/place_name_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/place_address_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:text="@string/address"
            android:textColor="@color/black"
            android:translationX="-350dp"
            android:translationY="-53dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/favorites_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:visibility="visible" />
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <View
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/text_project_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_map"
            android:textColor="@color/light_blue"
            android:translationX="140dp"
            android:translationY="-110dp" />

        <View
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/text_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_places"
            android:textColor="@color/light_blue"
            android:translationX="67dp"
            android:translationY="-65dp" />

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text"
            android:layout_width="213dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/gold"
            android:completionThreshold="0"
            android:hint="@string/type_a_place"
            android:textColorHint="@color/light_blue"
            android:translationX="187dp"
            android:translationY="-50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:translationX="0dp"
            android:translationY="0dp">
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_place"
            android:textColor="@color/light_blue"
            android:translationX="130dp"
            android:translationY="-65dp" />

        <TableLayout
            android:id="@+id/place_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="500dp">

        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/map_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone">

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/place_details"
            android:layout_width="465dp"
            android:layout_height="780dp"
            android:layout_gravity="center"
            android:background="@color/quantum_grey800"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="30sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/total_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="30sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textSize="30sp"
                tools:ignore="HardcodedText" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@color/quantum_yellow"
                android:stepSize="0.1"
                android:translationX="100dp"
                android:translationY="-40dp" />

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/favorite_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="Favorite"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


</RelativeLayout>